# safebrowsing-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix  url.txt
.github/workflows/: nix-check.yml
examples/: basic.rs
safebrowsing/: CHANGELOG.md  Cargo.toml  build.rs
safebrowsing-api/: CHANGELOG.md  Cargo.toml
safebrowsing-api/src/: lib.rs
safebrowsing-db/: CHANGELOG.md  Cargo.toml
safebrowsing-db-redb/: CHANGELOG.md  Cargo.toml  README.md
safebrowsing-db-redb/examples/: basic_usage.rs
safebrowsing-db-redb/src/: lib.rs
safebrowsing-db/examples/: basic_usage.rs
safebrowsing-db/src/: concurrent_db.rs  lib.rs  memory_db.rs  redb.rs
safebrowsing-db/tests/: hash_decode_tests.rs
safebrowsing-hash/: CHANGELOG.md  Cargo.toml
safebrowsing-hash/src/: lib.rs  rice.rs
safebrowsing-hash/tests/: integration_test.rs
safebrowsing-proto/: CHANGELOG.md  Cargo.toml  build.rs
safebrowsing-proto/src/: lib.rs  safebrowsing_proto.proto
safebrowsing-url/: CHANGELOG.md  Cargo.toml
safebrowsing-url/src/: lib.rs
safebrowsing/proto/: safebrowsing.proto
safebrowsing/src/: api.rs  cache.rs  database.rs  error.rs  hash.rs  lib.rs  proto.rs  types.rs  urls.rs
sblookup/: CHANGELOG.md  Cargo.toml  README.md
sblookup/src/: main.rs
sblookup/tests/: snapbox.rs
sblookup/tests/snapshots/: snapbox__test_snap_fixture.txt  snapbox__test_snap_fixture@1.txt
sbserver/: CHANGELOG.md  Cargo.toml  README.md
sbserver/src/: main.rs
scripts/: charts.nu
