[workspace]
resolver = "3"
members = [
    "safebrowsing",
]

[workspace.package]
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust implementation of Google Safe Browsing Update API (v4)"
repository = "https://github.com/your-org/safebrowsing-rs"
keywords = ["safebrowsing", "security", "google", "api"]
categories = ["api-bindings", "web-programming"]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.10"
url = "2.5"
prost = "0.12"
prost-types = "0.12"
bytes = "1.5"
async-trait = "0.1"
dashmap = "5.5"
regex = "1.10"
idna = "0.5"
flate2 = "1.0"
rand = "0.8"
