[package]
name = "safebrowsing-api"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Client for Google Safe Browsing API v4"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
prost.workspace = true
prost-types.workspace = true
safebrowsing-proto.workspace = true
safebrowsing-hash.workspace = true
hex = "0.4"

[dev-dependencies]
tokio-test.workspace = true
mockito.workspace = true
tracing-subscriber.workspace = true
