[package]
name = "safebrowsing-db"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Database interface and implementations for Google Safe Browsing API"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["concurrent-db"]
redb = ["dep:redb", "dep:dirs"]
memory-db = []
concurrent-db = ["memory-db"]

[dependencies]
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
dashmap.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
bytes.workspace = true
safebrowsing-proto.workspace = true
safebrowsing-hash.workspace = true
safebrowsing-api.workspace = true
flate2.workspace = true
rand.workspace = true
hex = "0.4"
redb = { version = "3.0", optional = true }
dirs = { version = "6.0", optional = true }

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
tracing-subscriber.workspace = true
prost = "0.14"
hex = "0.4"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
required-features = ["redb"]
