[package]
name = "safebrowsing-proto"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Protocol buffer definitions for Google Safe Browsing API"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
prost.workspace = true
prost-types.workspace = true
bytes.workspace = true

[build-dependencies]
prost-build = "0.12"