[package]
name = "safebrowsing"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
redb = ["safebrowsing-db/redb"]

[dependencies]
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
serde.workspace = true

# Re-export workspace crates
safebrowsing-api.workspace = true
safebrowsing-db.workspace = true
safebrowsing-hash.workspace = true
safebrowsing-proto.workspace = true
safebrowsing-url.workspace = true

# External dependencies required by this crate
bytes = "1"
prost = "0.14"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
dashmap = "6"
sha2 = "0.10"
regex = "1"
url = "2"
serde_json = "1"
idna = "1.0"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber.workspace = true
mockito = "1.2"
tempfile = "3.8"
