[package]
name = "sblookup"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line Safe Browsing URL lookup tool"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "sblookup"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["io-util", "io-std"] }
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4.4", features = ["derive", "env"] }

# Safe browsing crates
safebrowsing = { path = "../safebrowsing", features = ["redb"] }
safebrowsing-api.workspace = true

[dev-dependencies]
snapbox = {version = "0.6", features = ["regex", "cmd"]}
regex = "*"
